--- a/BXiOSExtensionDemo/Base.lproj/Main.storyboard
+++ b/BXiOSExtensionDemo/Base.lproj/Main.storyboard
@@ -1,25 +1,203 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZKG-4d-3PU">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="wab-8P-Fsw">
+            <objects>
+                <navigationController id="ZKG-4d-3PU" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lzn-gj-r2A">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="qFx-rF-8iu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Uf-Eb-pac" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="286" y="-52"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BPH-Xf-P01">
+                                <rect key="frame" x="30" y="124" width="260" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="kkI-Rs-0or"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="yrX-gd-fxy"/>
+                                </connections>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a4x-OF-dxL">
+                                <rect key="frame" x="247" y="78" width="51" height="31"/>
+                                <connections>
+                                    <action selector="didClickSwitchAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="ByX-iD-shh"/>
+                                </connections>
+                            </switch>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BPH-Xf-P01" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="60" id="J7H-cL-CWq"/>
+                            <constraint firstAttribute="trailing" secondItem="BPH-Xf-P01" secondAttribute="trailing" constant="30" id="OJi-e3-c0W"/>
+                            <constraint firstItem="BPH-Xf-P01" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="30" id="dQv-x2-7Mc"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="lKz-kg-bfI"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="messageTextField" destination="BPH-Xf-P01" id="RtU-pY-OcE"/>
+                        <outlet property="todaySwitch" destination="a4x-OF-dxL" id="rlf-cE-IXa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="696" y="-52"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="KJi-1i-nVQ">
+            <objects>
+                <viewController id="xrU-il-htG" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="egH-Xr-Z1u"/>
+                        <viewControllerLayoutGuide type="bottom" id="bcP-dd-fqX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WrT-4G-VVt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="天气" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kKU-k4-ofe">
+                                <rect key="frame" x="136.5" y="270" width="46" height="27.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xm8-Vi-Kxi">
+                                <rect key="frame" x="25" y="28" width="37" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="37" id="TaU-y0-Ayq"/>
+                                    <constraint firstAttribute="height" constant="30" id="fTQ-Gl-fBw"/>
+                                </constraints>
+                                <state key="normal" title="close">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="kKU-k4-ofe" secondAttribute="centerY" id="Joc-Ph-4sc"/>
+                            <constraint firstItem="Xm8-Vi-Kxi" firstAttribute="leading" secondItem="WrT-4G-VVt" secondAttribute="leading" constant="25" id="Ra6-PY-l0w"/>
+                            <constraint firstAttribute="centerX" secondItem="kKU-k4-ofe" secondAttribute="centerX" id="ZHY-cy-xVX"/>
+                            <constraint firstItem="Xm8-Vi-Kxi" firstAttribute="top" secondItem="egH-Xr-Z1u" secondAttribute="bottom" constant="8" id="ia6-us-5eC"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="avh-Bj-tro" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1057" y="-52"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="RrC-Cg-64M">
+            <objects>
+                <viewController id="0Uh-fb-nRz" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ghk-ie-EIw"/>
+                        <viewControllerLayoutGuide type="bottom" id="mrR-Ye-bjy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bo2-yy-Syl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YBb-3d-IMv">
+                                <rect key="frame" x="40" y="190" width="240" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="MeF-SM-Tgq"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9V9-rl-f0k">
+                                <rect key="frame" x="21" y="20" width="37" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="b6m-AD-l9W"/>
+                                    <constraint firstAttribute="width" constant="37" id="wH0-J3-Ebg"/>
+                                </constraints>
+                                <state key="normal" title="close">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="YBb-3d-IMv" firstAttribute="leading" secondItem="bo2-yy-Syl" secondAttribute="leading" constant="40" id="44r-l0-etv"/>
+                            <constraint firstAttribute="trailing" secondItem="YBb-3d-IMv" secondAttribute="trailing" constant="40" id="8bc-1g-8P1"/>
+                            <constraint firstItem="9V9-rl-f0k" firstAttribute="leading" secondItem="bo2-yy-Syl" secondAttribute="leading" constant="21" id="Aue-zp-9Xb"/>
+                            <constraint firstItem="YBb-3d-IMv" firstAttribute="top" secondItem="9V9-rl-f0k" secondAttribute="bottom" constant="140" id="QoR-qI-POU"/>
+                            <constraint firstItem="9V9-rl-f0k" firstAttribute="top" secondItem="Ghk-ie-EIw" secondAttribute="bottom" id="qAZ-Fw-yIq"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BZe-5d-tZb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1431" y="-52"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="FVq-3k-U1i">
+            <objects>
+                <viewController id="3sG-bV-UAs" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oUh-RR-dzM"/>
+                        <viewControllerLayoutGuide type="bottom" id="rQe-fW-OIz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vvE-ju-jBb">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="相机" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCi-cc-OF1">
+                                <rect key="frame" x="135" y="269" width="50" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3S9-Ii-PO4">
+                                <rect key="frame" x="16" y="20" width="37" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="u57-ar-ZZP"/>
+                                    <constraint firstAttribute="width" constant="37" id="zr9-lH-JTc"/>
+                                </constraints>
+                                <state key="normal" title="close">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="3S9-Ii-PO4" firstAttribute="top" secondItem="vvE-ju-jBb" secondAttribute="top" constant="20" id="QSI-W4-vjY"/>
+                            <constraint firstAttribute="centerX" secondItem="eCi-cc-OF1" secondAttribute="centerX" id="bwY-HZ-1vA"/>
+                            <constraint firstAttribute="centerY" secondItem="eCi-cc-OF1" secondAttribute="centerY" id="eaR-GM-Bxy"/>
+                            <constraint firstItem="3S9-Ii-PO4" firstAttribute="leading" secondItem="vvE-ju-jBb" secondAttribute="leading" constant="16" id="x2Q-jh-ncB"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TIZ-LS-Wkp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1790" y="-43"/>
         </scene>
     </scenes>
 </document>
