--- a/BXiOSExtensionDemo/Base.lproj/Main.storyboard
+++ b/BXiOSExtensionDemo/Base.lproj/Main.storyboard
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZKG-4d-3PU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bHS-Fz-98R">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="K8n-Nz-S8h">
+            <objects>
+                <tabBarController id="bHS-Fz-98R" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="dyp-dU-nea">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ZKG-4d-3PU" kind="relationship" relationship="viewControllers" id="Rbl-s6-2Il"/>
+                        <segue destination="JkK-NM-lo7" kind="relationship" relationship="viewControllers" id="f80-90-vWO"/>
+                        <segue destination="bJo-K0-sO3" kind="relationship" relationship="viewControllers" id="VA1-Ku-gSt"/>
+                        <segue destination="Adg-oT-CNu" kind="relationship" relationship="viewControllers" id="EGD-6y-ZOt"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MVg-3M-zYU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-619" y="601"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="wab-8P-Fsw">
             <objects>
                 <navigationController id="ZKG-4d-3PU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Y04-bL-bXV"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lzn-gj-r2A">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -19,12 +42,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Uf-Eb-pac" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="286" y="-52"/>
+            <point key="canvasLocation" x="-64" y="-100"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -67,12 +90,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="696" y="-52"/>
+            <point key="canvasLocation" x="331" y="-224"/>
         </scene>
-        <!--View Controller-->
+        <!--Weather View Controller-->
         <scene sceneID="KJi-1i-nVQ">
             <objects>
-                <viewController id="xrU-il-htG" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BXWeatherViewController" id="xrU-il-htG" customClass="BXWeatherViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="egH-Xr-Z1u"/>
                         <viewControllerLayoutGuide type="bottom" id="bcP-dd-fqX"/>
@@ -82,13 +105,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="天气" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kKU-k4-ofe">
-                                <rect key="frame" x="136.5" y="270" width="46" height="27.5"/>
+                                <rect key="frame" x="137" y="270" width="46" height="27.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xm8-Vi-Kxi">
-                                <rect key="frame" x="25" y="28" width="37" height="30"/>
+                                <rect key="frame" x="25" y="72" width="37" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="37" id="TaU-y0-Ayq"/>
                                     <constraint firstAttribute="height" constant="30" id="fTQ-Gl-fBw"/>
@@ -96,6 +119,9 @@
                                 <state key="normal" title="close">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="didClickCloseButtonAction:" destination="xrU-il-htG" eventType="touchUpInside" id="mqG-yD-bhZ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -106,16 +132,17 @@
                             <constraint firstItem="Xm8-Vi-Kxi" firstAttribute="top" secondItem="egH-Xr-Z1u" secondAttribute="bottom" constant="8" id="ia6-us-5eC"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="i2j-nh-2CD"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="avh-Bj-tro" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057" y="-52"/>
+            <point key="canvasLocation" x="346" y="439"/>
         </scene>
-        <!--View Controller-->
+        <!--Image View Controller-->
         <scene sceneID="RrC-Cg-64M">
             <objects>
-                <viewController id="0Uh-fb-nRz" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BXImageViewController" id="0Uh-fb-nRz" customClass="BXImageViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ghk-ie-EIw"/>
                         <viewControllerLayoutGuide type="bottom" id="mrR-Ye-bjy"/>
@@ -124,14 +151,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YBb-3d-IMv">
-                                <rect key="frame" x="40" y="190" width="240" height="200"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="屏幕快照 2015-04-02 17.58.57.png" translatesAutoresizingMaskIntoConstraints="NO" id="YBb-3d-IMv">
+                                <rect key="frame" x="40" y="234" width="240" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="MeF-SM-Tgq"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9V9-rl-f0k">
-                                <rect key="frame" x="21" y="20" width="37" height="30"/>
+                                <rect key="frame" x="21" y="64" width="37" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="b6m-AD-l9W"/>
                                     <constraint firstAttribute="width" constant="37" id="wH0-J3-Ebg"/>
@@ -139,6 +166,9 @@
                                 <state key="normal" title="close">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="didClickCloseButtonAction:" destination="0Uh-fb-nRz" eventType="touchUpInside" id="8cQ-iz-NzK"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -150,16 +180,17 @@
                             <constraint firstItem="9V9-rl-f0k" firstAttribute="top" secondItem="Ghk-ie-EIw" secondAttribute="bottom" id="qAZ-Fw-yIq"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="c8C-1X-c30"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BZe-5d-tZb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1431" y="-52"/>
+            <point key="canvasLocation" x="338" y="1120"/>
         </scene>
-        <!--View Controller-->
+        <!--Camera View Controller-->
         <scene sceneID="FVq-3k-U1i">
             <objects>
-                <viewController id="3sG-bV-UAs" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BXCameraViewController" id="3sG-bV-UAs" customClass="BXCameraViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="oUh-RR-dzM"/>
                         <viewControllerLayoutGuide type="bottom" id="rQe-fW-OIz"/>
@@ -168,8 +199,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="相机" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCi-cc-OF1">
-                                <rect key="frame" x="135" y="269" width="50" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCi-cc-OF1">
+                                <rect key="frame" x="116" y="269" width="87" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -183,6 +214,9 @@
                                 <state key="normal" title="close">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="didClickCloseButtonAction:" destination="3sG-bV-UAs" eventType="touchUpInside" id="dnH-pv-NRe"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -193,11 +227,69 @@
                             <constraint firstItem="3S9-Ii-PO4" firstAttribute="leading" secondItem="vvE-ju-jBb" secondAttribute="leading" constant="16" id="x2Q-jh-ncB"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="iOp-dS-06I"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TIZ-LS-Wkp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1790" y="-43"/>
+            <point key="canvasLocation" x="338" y="1766"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="CfN-dC-y5R">
+            <objects>
+                <navigationController id="JkK-NM-lo7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Ioo-Ku-ypo"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="V9U-ei-2Sq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="xrU-il-htG" kind="relationship" relationship="rootViewController" id="eMh-Kd-uVL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jwx-xZ-Zp2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-64" y="531"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="yWw-Uw-68y">
+            <objects>
+                <navigationController id="Adg-oT-CNu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="nZX-5k-Rqh"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hO5-OC-o97">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="3sG-bV-UAs" kind="relationship" relationship="rootViewController" id="PPt-n5-hLp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DgB-UM-kNs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-45" y="1653"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="fKL-3o-7ub">
+            <objects>
+                <navigationController id="bJo-K0-sO3" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="jvf-2m-oXS"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fHV-JY-qfL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="0Uh-fb-nRz" kind="relationship" relationship="rootViewController" id="JaD-Lf-SXF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SYm-9m-AZk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-40" y="1198"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="屏幕快照 2015-04-02 17.58.57.png" width="1002" height="714"/>
+    </resources>
 </document>
